# ignition

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .yapfignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.sh  titan2.py
.github/: dependabot.yml
.github/workflows/: ci-v2.yml  codeql-analysis.yml  codeql.yml  python-ci-v2.yml  python-ci.yml  python-publish-package.yml  release-pipeline.yml
docs/: api.md  build.md  developer.md
examples/: advanced-usage.py  advanced_usage.py  simple-usage.py  simple_usage.py  using-referer.py  using_referer.py
ignition/: __init__.py  __main__.py  cert_store.py  exceptions.py  globals.py  request.py  response.py  url.py  util.py
ignition/python/: __init__.py
ignition/python/python3_10/Lib/urllib/: parse.py
ignition/python/python3_11/: LICENSE_NOTICE
ignition/python/python3_11/Lib/urllib/: parse.py
ignition/python/python3_12/Lib/urllib/: parse.py
ignition/python/python3_7/: LICENSE_NOTICE
ignition/python/python3_7/Lib/urllib/: parse.py
ignition/python/python3_8/: LICENSE_NOTICE
ignition/python/python3_8/Lib/urllib/: parse.py
ignition/python/python3_9/: LICENSE_NOTICE
ignition/python/python3_9/Lib/urllib/: parse.py
ignition/ssl/: cert_record.py  cert_store.py  cert_wrapper.py  exceptions.py
tests/: __init__.py  helpers.py  test_cert_store.py  test_ignition.py  test_request.py  test_response.py  test_url.py  test_util.py
tests/fixtures/: sample_cert.der  sample_cert.pem
tests/ssl/: __init__.py  test_cert_record.py  test_cert_wrapper.py
titan2/: __init__.py  cert_store.py  globals.py  request.py  response.py  session_manager.py  url.py  util.py
titan2/python/python3_7/Lib/urllib/: parse.py
titan2/python/python3_9/Lib/urllib/: parse.py
titan2/test/: test_url.py  test_util.py
