[project]
name = "ignition-gemini"
authors = [
  { name="Chris Brousseau", email="cbrews@users.noreply.github.com" },
]
description = "ignition - Gemini Protocol Client Transport Library"
readme = "README.md"
license = { text = "MPL 2.0" }
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = [
  "gemini", 
  "client", 
  "request", 
  "socket", 
  "networking"
]
dynamic = ["version"]
dependencies = [
  "cryptography>=36.0.0",
]

[project.optional-dependencies]
dev = [
  "cryptography==39.0.1",
  "mock==5.0.1",
  "pytest==7.2.1",
  "pytest-cov==4.0.0",
  "pytest-mock==3.10.0",
  "pylint==2.16.1",
  "isort==5.12.0",
  "black==23.1.0",
  "pre-commit==3.0.4",
]
lint = [
  "pylint==2.16.1",
  "isort==5.12.0",
  "black==23.1.0",
  "mock==5.0.1",
  "pytest==7.2.1",
]
test = [
  "mock==5.0.1",
  "pytest==7.2.1",
  "pytest-cov==4.0.0",
  "pytest-mock==3.10.0",
]
build = [
  "build",
  "twine",
]

[project.urls]
"Homepage" = "https://github.com/cbrews/ignition"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = "ignition/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/LICENSE',
    '/ignition',
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
profile = "black"
skip = [
  "ignition/python",
  "venv",
  "build",
]