[project]
name = "ignition-gemini"
authors = [
  { name="Chris Brousseau", email="cbrews@users.noreply.github.com" },
]
description = "ignition - Gemini Protocol Client Transport Library"
readme = "README.md"
license = { text = "MPL 2.0" }
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = [
  "gemini", 
  "client", 
  "request", 
  "socket", 
  "networking"
]
dynamic = ["version"]
dependencies = [
  "cryptography>=36.0.0",
]

[project.optional-dependencies]
dev = [
  "cryptography==42.0.5",
  "mock==5.1.0",
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
  "pytest-mock==3.11.1",
  "black==24.4.0",
  "pre-commit==3.7.0",
  "ruff==0.4.0",
]
lint = [
  "ruff==0.4.0",
  "black==24.4.0",
  "mock==5.1.0",
  "pytest==7.4.4",
]
test = [
  "mock==5.1.0",
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
  "pytest-mock==3.11.1",
]
build = [
  "build",
  "twine",
]

[project.urls]
"Homepage" = "https://github.com/cbrews/ignition"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = "ignition/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/LICENSE',
    '/ignition',
]

[tool.hatch.build.targets.wheel]
packages = ["ignition"]

[tool.black]
exclude = "ignition/python"

[tool.ruff]
select = [
  "I", # isort
  "PLC", # pylint conventions
  "PLE", # pylint errors
  "PLW", # pylint warnings
]
exclude = [
  "ignition/python",
]