[metadata]
license_files = LICENSE

[isort]
multi_line_output = 3
include_trailing_comma = True
line_length = 140
indent = 2
skip = ignition/python,
       venv,
       build

[yapf]
indent_width = 2
continuation_indent_width = 2
column_limit = 140
dedent_closing_brackets = True
SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = True
COALESCE_BRACKETS = True
SPLIT_COMPLEX_COMPREHENSION = True
split_all_comma_separated_values = True
split_all_top_level_comma_separated_values = True