[metadata]
name = ignition-gemini
version = attr: ignition.__version__
description = ignition - Gemini Protocol Client Transport Library
url = https://github.com/cbrews/ignition
author = Chris Brousseau
license = MPL 2.0
license_files = LICENSE
classifiers = Development Status :: 2 - Pre-Alpha
              Intended Audience :: Developers
              Topic :: Software Development :: Libraries
              License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
              Programming Language :: Python :: 3 :: Only
keywords = gemini, client, request, socket
platform = any

[isort]
multi_line_output = 3
include_trailing_comma = True
line_length = 140
indent = 2
skip = ignition/python,
       venv,
       build

[yapf]
indent_width = 2
continuation_indent_width = 2
column_limit = 140
dedent_closing_brackets = True
SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = True
COALESCE_BRACKETS = True
SPLIT_COMPLEX_COMPREHENSION = True
split_all_comma_separated_values = True
split_all_top_level_comma_separated_values = True